✨style: Bulk processing format

--- a/LeetCode/1721-1730/1728. 猫和老鼠 II（困难）.md
+++ b/LeetCode/1721-1730/1728. 猫和老鼠 II（困难）.md
@@ -82,7 +82,7 @@ Tag : 「博弈论」、「动态规划」、「记忆化搜索」
 
 当时在 [(题解) 913. 猫和老鼠](https://leetcode.cn/problems/cat-and-mouse/solution/gong-shui-san-xie-dong-tai-gui-hua-yun-y-0bx1/) 没能证出来更小 $K$ 值（回合数）的正确性，用的 $2n^2$ 做的 ，其余题解说 $2 n$ 合法，后来也被证实是错误的。
 
-对于本题如果用相同的分析思路，状态数多达 $8 * 8 * 8 * 8 * 2 = 8192$ 种，题目很贴心调整了规则为 $1000$ 步以内为猫获胜，但证明 $K$ 的理论上界仍是困难（上次分析不出来，这次压根不想分析
+对于本题如果用相同的分析思路，状态数多达 $8 \times 8 \times 8 \times 8 \times 2 = 8192$ 种，题目很贴心调整了规则为 $1000$ 步以内为猫获胜，但证明 $K$ 的理论上界仍是困难（上次分析不出来，这次压根不想分析
 
 如果忽略 $K$ 值分析，代码还是很好写的：定义函数 `int dfs(int x, int y, int p, int q, int k)` 并配合记忆化搜索，其中鼠位于 $(x, y)$，猫位于 $(p, q)$，当前轮数为 $k$（由 $k$ 的奇偶性可知是谁的回合）。
 
@@ -151,8 +151,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 $n$ 和 $m$ 分别为矩阵的长宽，最长移动距离为 $L$，复杂度为 $O(n^2 * m^2 * 1000 * 4 * L)$
-* 空间复杂度：$O(n^2 * m^2 * 1000)$
+* 时间复杂度：令 $n$ 和 $m$ 分别为矩阵的长宽，最长移动距离为 $L$，复杂度为 $O(n^2 \times m^2 \times 1000 \times 4 \times L)$
+* 空间复杂度：$O(n^2 \times m^2 \times 1000)$
 
 ---
 
