--- a/LeetCode/1751-1760/1751. 最多可以参加的会议数目 II（困难）.md
+++ b/LeetCode/1751-1760/1751. 最多可以参加的会议数目 II（困难）.md
@@ -105,8 +105,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：排序复杂度为 $O(n\log{n})$，循环 `n` 个事件，每次循环需要往回找一个事件，复杂度为 $O(n)$，并更新 `k` 个状态，复杂度为 $O(k)$，因此转移的复杂度为 $O(n * (n + k))$；总的复杂度为 $O(n * (n + k + \log{n}))$
-* 空间复杂度：$O(n * k)$
+* 时间复杂度：排序复杂度为 $O(n\log{n})$，循环 `n` 个事件，每次循环需要往回找一个事件，复杂度为 $O(n)$，并更新 `k` 个状态，复杂度为 $O(k)$，因此转移的复杂度为 $O(n \times (n + k))$；总的复杂度为 $O(n \times (n + k + \log{n}))$
+* 空间复杂度：$O(n \times k)$
 
 ---
 
@@ -145,8 +145,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：排序复杂度为 $O(n\log{n})$，循环 `n` 个事件，每次循环需要往回找一个事件，复杂度为 $O(\log{n})$，并更新 `k` 个状态，复杂度为 $O(k)$，因此转移的复杂度为 $O(n * (\log{n} + k))$；总的复杂度为 $O(n * (k + \log{n}))$
-* 空间复杂度：$O(n * k)$
+* 时间复杂度：排序复杂度为 $O(n\log{n})$，循环 `n` 个事件，每次循环需要往回找一个事件，复杂度为 $O(\log{n})$，并更新 `k` 个状态，复杂度为 $O(k)$，因此转移的复杂度为 $O(n \times (\log{n} + k))$；总的复杂度为 $O(n \times (k + \log{n}))$
+* 空间复杂度：$O(n \times k)$
 
 ---
 
