--- a/LeetCode/2021-2030/2028. 找出缺失的观测数据（中等）.md
+++ b/LeetCode/2021-2030/2028. 找出缺失的观测数据（中等）.md
@@ -62,12 +62,13 @@ $k$ 个数字的 平均值 为这些数字求和后再除以 $k$ 。
 
 根据题意，我们需要构造长度为 $n$ 的序列 $ans$，使得 $ans$ 和 $rolls$ 并集的平均值为 $mean$。
 
-由于最终的平均值 $mean$ 已知，我们可以直接算得两序列之和为 $t = (m + n) * mean$。
+由于最终的平均值 $mean$ 已知，我们可以直接算得两序列之和为 $t = (m + n) \times mean$。
 
-使用 $t$ 减去 $\sum_{i = 0}^{m}rolls[i]$ 可得 $\sum_{i = 0}^{n}ans[i]$。我们知道一个长度为 $n$ 的有效序列的元素和范围为 $[n, 6 * n]$（骰子编号为 $[1, 6]$），根据 $\sum_{i = 0}^{m}rolls[i]$ 与 $[n, 6 * n]$ 关系进行分情况讨论：
+使用 $t$ 减去 $$\sum_{i = 0}^{m}rolls[i]$$ 可得 $$\sum_{i = 0}^{n}ans[i]$$。我们知道一个长度为 $n$ 的有效序列的元素和范围为 $[n, 6 \times n]$（骰子编号为 $[1, 6]$），根据 $\sum_{i = 0}^{m}rolls[i]$ 与 $[n, 6 \times n]$ 关系进行分情况讨论：
 
-* 如果 $\sum_{i = 0}^{n}ans[i]$ 不落在 $[n, 6 * n]$ 范围内，无解，直接返回空数组；
-* 如果 $\sum_{i = 0}^{n}ans[i]$ 落在 $[n, 6 * n]$ 范围内，有解，此时尝试构造一个合法的 $ans$ : 起始使用 $\left \lfloor \frac{\sum_{i = 0}^{n}ans[i]}{n} \right \rfloor$ 填充 $ans$，若 $\left \lfloor \frac{\sum_{i = 0}^{n}ans[i]}{n} \right \rfloor * n < \sum_{i = 0}^{n}ans[i]$，计算两者差异值 $d$，并尝试将 $d$ 分摊到前 $d$ 个 $ans[i]$ 上（该过程一定可以顺利进行）。
+* 如果 $$\sum_{i = 0}^{n}ans[i]$$ 不落在 $[n, 6  \times n]$ 范围内，无解，直接返回空数组；
+
+* 如果 $$\sum_{i = 0}^{m} rool[i]$$ 落在 $[n, 6 \times n]$ 范围内，有解，此时尝试构造一个合法的 $ans$ : 起始使用 $$\left \lfloor \frac{\sum_{i = 0}^{n}ans[i]}{n} \right \rfloor$$ 填充 $ans$，若 $$\left \lfloor \frac{\sum_{i = 0}^{n}ans[i]}{n} \right \rfloor \times n < \sum_{i = 0}^{n}ans[i]$$，计算两者差异值 $d$，并尝试将 $d$ 分摊到前 $d$ 个 $ans[i]$ 上（该过程一定可以顺利进行）。
 
 代码：
 ```Java
