--- a/LeetCode/71-80/80. 删除有序数组中的重复项 II（中等）.md
+++ b/LeetCode/71-80/80. 删除有序数组中的重复项 II（中等）.md
@@ -6,11 +6,9 @@ Tag : 「双指针」
 
 
 
-给你一个有序数组 nums ，请你「原地」删除重复出现的元素，使每个元素 最多出现两次 ，返回删除后数组的新长度。
+给你一个有序数组 `nums` ，请你「原地」删除重复出现的元素，使每个元素 最多出现两次 ，返回删除后数组的新长度。
 
 不要使用额外的数组空间，你必须「原地」修改输入数组 并在使用 $O(1)$ 额外空间的条件下完成。
-
- 
 
 说明：
 
@@ -50,9 +48,9 @@ for (int i = 0; i < len; i++) {
 
 提示：
 
-* 1 <= nums.length <= 3 * $10^4$
-* -$10^4$ <= nums[i] <= $10^4$
-* nums 已按升序排列
+* $1 <= nums.length <= 3 \times 10^4$
+* $-10^4 <= nums[i] <= 10^4$
+* `nums` 已按升序排列
 
 ---
 
@@ -65,9 +63,7 @@ for (int i = 0; i < len; i++) {
 * 由于是保留 `k` 个相同数字，**对于前 `k` 个数字，我们可以直接保留**
 * 对于后面的任意数字，能够保留的前提是：**与当前写入的位置前面的第 `k` 个元素进行比较，不相同则保留**
 
-举个🌰，我们令 `k=2`，假设有如下样例
-
-[1,1,1,1,1,1,2,2,2,2,2,2,3]
+举个🌰，我们令 `k=2`，假设有如下样例 $[1,1,1,1,1,1,2,2,2,2,2,2,3]$
 
 1. 首先我们先让前 2 位直接保留，得到 1,1
 2. 对后面的每一位进行继续遍历，能够保留的前提是与当前位置的前面 `k` 个元素不同（答案中的第一个 1），因此我们会跳过剩余的 1，将第一个 2 追加，得到 1,1,2
