--- a/LeetCode/431-440/433. 最小基因变化（中等）.md
+++ b/LeetCode/431-440/433. 最小基因变化（中等）.md
@@ -91,7 +91,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 $n$ 为 `bank` 的数组长度（合法状态数），将 `bank` 存入 `Set` 结构复杂度为 $O(n)$，每个状态经过一步操作最多拓展出 $C = 32$ 个新基因（共有 $8$ 个位置，每个位置有 $4$ 个选择），`BFS`  过程复杂度为 $O(C * n)$。整体复杂度为  $O(C * n)$
+* 时间复杂度：令 $n$ 为 `bank` 的数组长度（合法状态数），将 `bank` 存入 `Set` 结构复杂度为 $O(n)$，每个状态经过一步操作最多拓展出 $C = 32$ 个新基因（共有 $8$ 个位置，每个位置有 $4$ 个选择），`BFS`  过程复杂度为 $O(C \times n)$。整体复杂度为  $O(C \times n)$
 * 空间复杂度：$O(n)$
 
 ---
@@ -150,12 +150,12 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 $n$ 为 `bank` 的数组长度（合法状态数），将 `bank` 存入 `Set` 结构复杂度为 $O(n)$，每个状态经过一步操作最多拓展出 $C = 32$ 个新基因（共有 $8$ 个位置，每个位置有 $4$ 个选择），`BFS`  过程复杂度为 $O(C * n)$。整体复杂度为  $O(C * n)$
+* 时间复杂度：令 $n$ 为 `bank` 的数组长度（合法状态数），将 `bank` 存入 `Set` 结构复杂度为 $O(n)$，每个状态经过一步操作最多拓展出 $C = 32$ 个新基因（共有 $8$ 个位置，每个位置有 $4$ 个选择），`BFS`  过程复杂度为 $O(C \times n)$。整体复杂度为  $O(C \times n)$
 * 空间复杂度：$O(n)$
 
 ---
 
-### A* 算法
+### AStar 算法
 
 若不考虑 `bank` 的限制，对于一个特定状态而言，我们可以任意选择一位替换为 $4$ 类字符之一，因此对于任意状态 $x$ 而言，其与目标状态 $T$ 的「理论最小转换步数」为两者对应位置不同字符的数量，而由于存在 `bank` 限制，实际最小步数必然满足「大于等于」该理论最小转换步数。
 
@@ -163,7 +163,7 @@ class Solution {
 
 具体的，我们使用优先队列（堆）维护所有的状态，每次优先「启发值 = 理论最小转换步数」的状态进行优先出队拓展。
 
-对「A* 算法」不了解的同学可以看前置 🧀：[发挥 A* 算法最大价值的关键点](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247489588&idx=1&sn=479e4c0627247ab7e20af7909f2a8b64)。
+对「AStar 算法」不了解的同学可以看前置 🧀：[发挥 A* 算法最大价值的关键点](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247489588&idx=1&sn=479e4c0627247ab7e20af7909f2a8b64)。
 
 代码：
 ```Java
@@ -285,7 +285,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 `bank` 的长度为 $n$（即点集的数量级为 $n$），预处理出 `list` 的复杂度为 $O(n)$；建图操作的复杂度为 $O(C * n^2)$，其中 $C = 8$ 基因序列长度；`DFS` 过程由于设定了最大搜索深度，复杂度为 $O(n^2)$。整体复杂度为 $O(C * n^2)$
+* 时间复杂度：令 `bank` 的长度为 $n$（即点集的数量级为 $n$），预处理出 `list` 的复杂度为 $O(n)$；建图操作的复杂度为 $O(C \times n^2)$，其中 $C = 8$ 基因序列长度；`DFS` 过程由于设定了最大搜索深度，复杂度为 $O(n^2)$。整体复杂度为 $O(C \times n^2)$
 * 空间复杂度：最坏情况下为完全图，复杂度为 $O(n^2)$
 
 ---
