--- a/LeetCode/441-450/449. 序列化和反序列化二叉搜索树（中等）.md
+++ b/LeetCode/441-450/449. 序列化和反序列化二叉搜索树（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[449. 序列化和反序列化二叉搜索树](https://leetcode.cn/problems/serialize-and-deserialize-bst/solution/by-ac_oier-ncwn/)** ，难度为 **中等**。
 
-Tag : 「前序遍历」、「BST」
+Tag : 「前序遍历」、「BST」、「二分」
 
 
 
@@ -85,7 +85,62 @@ public class Codec {
     }
 }
 ```
-* 时间复杂度：令节点数量为 $n$，复杂度为 $O(n)$
+* 时间复杂度：令节点数量为 $n$，序列化的复杂度为 $O(n)$；反序列时由于存在「找第一个比头结点值大的位置」操作，每个节点可能被扫描多次，扫描次数与当前节点所在的深度相关，最坏情况下为一条往左下方的链，复杂度为 $O(n^2)$
+* 空间复杂度：$O(n)$
+
+---
+
+### 二分优化
+
+在解法一中的「反序列操作」操作的瓶颈在于需要「找第一个比头结点值大的位置」。
+
+假设连续段 $s[l, r]$ 代表某棵子树的话，由于我们是采用「前序遍历」的方式生成 `s`，因此头结点必然是 $s[l]$，而对于头结点的左右子树，必然是连续两段（先左再右）的形式存储在 $[l + 1, r]$ 中，同时由于该子树是 BST，因此这连续两段必然满足「前一段（左子树）小于 $t$」和「后一段（右子树）大于 $t$」。
+
+即具有「二段性」，因此「找第一个比头结点值大的位置」可用「二分」实现。
+
+代码：
+```Java
+public class Codec {
+    public String serialize(TreeNode root) {
+        if (root == null) return null;
+        List<String> list = new ArrayList<>();
+        dfs1(root, list);
+        int n = list.size();
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < n; i++) {
+            sb.append(list.get(i));
+            if (i != n - 1) sb.append(",");
+        }
+        return sb.toString();
+    }
+    void dfs1(TreeNode root, List<String> list) {
+        if (root == null) return ;
+        list.add(String.valueOf(root.val));
+        dfs1(root.left, list);
+        dfs1(root.right, list);
+    }
+    public TreeNode deserialize(String s) {
+        if (s == null) return null;
+        String[] ss = s.split(",");
+        return dfs2(0, ss.length - 1, ss);
+    }
+    TreeNode dfs2(int l, int r, String[] ss) {
+        if (l > r) return null;
+        int ll = l + 1, rr = r, t = Integer.parseInt(ss[l]);
+        while (ll < rr) {
+            int mid = ll + rr >> 1;
+            if (Integer.parseInt(ss[mid]) > t) rr = mid;
+            else ll = mid + 1;
+        }
+        if (Integer.parseInt(ss[rr]) <= t) rr++;
+        TreeNode ans = new TreeNode(t);
+        ans.left = dfs2(l + 1, rr - 1, ss);
+        ans.right = dfs2(rr, r, ss);
+        return ans;
+    }
+}
+```
+* 时间复杂度：令节点数量为 $n$，序列化的复杂度为 $O(n)$；反序列时由于存在「找第一个比头结点值大的位置」操作，最坏情况下为一条往左下方的链，该操作采用「二分」，复杂度为 $O(\log{n})$，整体复杂度为 $O(n\log{n})$
 * 空间复杂度：$O(n)$
 
 ---
