--- a/LeetCode/911-920/913. 猫和老鼠（困难）.md
+++ b/LeetCode/911-920/913. 猫和老鼠（困难）.md
@@ -57,7 +57,7 @@ Tag : 「动态规划」、「记忆化搜索」
 
 数据范围只有 $50$，使得本题的难度大大降低。
 
-**定义 $f[k][i][j]$ 为当前进行了 $k$ 步，老鼠所在位置为 $i$，猫所在的位置为 $j$ 时，最终的获胜情况（$0$ 为平局，$1$ 和 $2$ 分别代表老鼠和猫获胜），起始我们让所有的 $f[i][j][k] = -1$（为无效值），最终答案为 $f[0][1][2]$。**
+**定义 $f[k][i][j]$ 为当前进行了 $k$ 步，老鼠所在位置为 $i$，猫所在的位置为 $j$ 时，最终的获胜情况（$0$ 为平局，$1$ 和 $2$ 分别代表老鼠和猫获胜），起始我们让所有的 $f[k][i][j] = -1$（为无效值），最终答案为 $f[0][1][2]$。**
 
 不失一般性的考虑 $f[i][j][k]$ 该如何转移，根据题意，将当前所在位置 $i$ 和 $j$ 结合「游戏结束，判定游戏」的规则来分情况讨论：
 
