✨style: Bulk processing format

--- a/LeetCode/681-690/688. 骑士在棋盘上的概率（中等）.md
+++ b/LeetCode/681-690/688. 骑士在棋盘上的概率（中等）.md
@@ -6,7 +6,7 @@ Tag : 「线性 DP」
 
 
 
-在一个 $n x n$ 的国际象棋棋盘上，一个骑士从单元格 $(row, column)$ 开始，并尝试进行 $k$ 次移动。行和列是 从 $0$ 开始 的，所以左上单元格是 $(0,0)$ ，右下单元格是 $(n - 1, n - 1)$ 。
+在一个 $n \times n$ 的国际象棋棋盘上，一个骑士从单元格 $(row, column)$ 开始，并尝试进行 $k$ 次移动。行和列是 从 $0$ 开始 的，所以左上单元格是 $(0,0)$ ，右下单元格是 $(n - 1, n - 1)$ 。
 
 象棋骑士有 $8$ 种可能的走法，如下图所示。每次移动在基本方向上是两个单元格，然后在正交方向上是一个单元格。
 
@@ -83,8 +83,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令某个位置可联通的格子数量 $C = 8$，复杂度为 $O(n^2 * k * C)$
-* 空间复杂度：$O(n^2 * k)$
+* 时间复杂度：令某个位置可联通的格子数量 $C = 8$，复杂度为 $O(n^2 \times k \times C)$
+* 空间复杂度：$O(n^2 \times k)$
 
 ---
 
