✨style: Bulk processing format

--- a/LeetCode/661-670/661. 图片平滑器（简单）.md
+++ b/LeetCode/661-670/661. 图片平滑器（简单）.md
@@ -94,8 +94,8 @@ class Solution:
                 ans[i][j] = tot // cnt
         return ans
 ```
-* 时间复杂度：$O(m * n * C)$，其中 $C$ 为灰度单位所包含的单元格数量，固定为 $9$
-* 空间复杂度：$O(m * n)$
+* 时间复杂度：$O(m \times n \times C)$，其中 $C$ 为灰度单位所包含的单元格数量，固定为 $9$
+* 空间复杂度：$O(m \times n)$
 
 ---
 
@@ -151,8 +151,8 @@ class Solution:
                 ans[i][j] = tot // cnt
         return ans
 ```
-* 时间复杂度：$O(m * n)$
-* 空间复杂度：$O(m * n)$
+* 时间复杂度：$O(m \times n)$
+* 空间复杂度：$O(m \times n)$
 
 ---
 
