✨style: Bulk processing format

--- a/LeetCode/31-40/31. 下一个排列（中等）.md
+++ b/LeetCode/31-40/31. 下一个排列（中等）.md
@@ -38,8 +38,8 @@ Tag : 「模拟」、「数学」
 ```
 
 提示：
-* 1 <= nums.length <= 100
-* 0 <= nums[i] <= 100
+* $1 <= nums.length <= 100$
+* $0 <= nums[i] <= 100$
 
 
 ---
