--- a/LeetCode/31-40/33. 搜索旋转排序数组（中等）.md
+++ b/LeetCode/31-40/33. 搜索旋转排序数组（中等）.md
@@ -36,13 +36,13 @@ Tag : 「二分」
 ```
 
 提示：
-* 1 <= nums.length <= 5000
-* -$10^4$ <= nums[i] <= $10^4$
-* nums 中的每个值都 独一无二
-* 题目数据保证 nums 在预先未知的某个下标上进行了旋转
-* -$10^4$ <= target <= $10^4$
+* $1 <= nums.length <= 5000$
+* $-10^4 <= nums[i] <= 10^4$
+* `nums` 中的每个值都 独一无二
+* 题目数据保证 `nums` 在预先未知的某个下标上进行了旋转
+* $-10^4 <= target <= 10^4$
 
-进阶：你可以设计一个时间复杂度为 O(log n) 的解决方案吗？
+进阶：你可以设计一个时间复杂度为 $O(\log{n})$ 的解决方案吗？
 
 ---
 
