--- a/LeetCode/31-40/36. 有效的数独（中等）.md
+++ b/LeetCode/31-40/36. 有效的数独（中等）.md
@@ -6,13 +6,13 @@ Tag : 「哈希表」、「数组」、「位运算」、「数独问题」
 
 
 
-请你判断一个 9x9 的数独是否有效。只需要 根据以下规则 ，验证已经填入的数字是否有效即可。
+请你判断一个 `9 x 9` 的数独是否有效。只需要 根据以下规则 ，验证已经填入的数字是否有效即可。
 
-1. 数字 1-9 在每一行只能出现一次。
-2. 数字 1-9 在每一列只能出现一次。
-3. 数字 1-9 在每一个以粗实线分隔的 3x3 宫内只能出现一次。（请参考示例图）
+1. 数字 `1-9` 在每一行只能出现一次。
+2. 数字 `1-9` 在每一列只能出现一次。
+3. 数字 `1-9` 在每一个以粗实线分隔的 `3 x 3` 宫内只能出现一次。（请参考示例图）
 
-数独部分空格内已填入了数字，空白格用 '.' 表示。
+数独部分空格内已填入了数字，空白格用 `'.'` 表示。
 
 注意：
 * 一个有效的数独（部分已被填充）不一定是可解的。
@@ -53,9 +53,9 @@ Tag : 「哈希表」、「数组」、「位运算」、「数独问题」
 ```
 
 提示：
-* board.length == 9
-* board[i].length == 9
-* board[i][j] 是一位数字或者 '.'
+* $board.length == 9$
+* $board[i].length == 9$
+* `board[i][j]` 是一位数字或者 `'.'`
 
 ---
 
@@ -99,8 +99,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：在固定 $9*9$ 的问题里，计算量不随数据变化而变化。复杂度为 $O(1)$
-* 空间复杂度：在固定 $9*9$ 的问题里，存储空间不随数据变化而变化。复杂度为 $O(1)$
+* 时间复杂度：在固定 $9 \times 9$ 的问题里，计算量不随数据变化而变化。复杂度为 $O(1)$
+* 空间复杂度：在固定 $9 \times 9$ 的问题里，存储空间不随数据变化而变化。复杂度为 $O(1)$
 
 ---
 
@@ -163,8 +163,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：在固定 $9*9$ 的问题里，计算量不随数据变化而变化。复杂度为 $O(1)$
-* 空间复杂度：在固定 $9*9$ 的问题里，存储空间不随数据变化而变化。复杂度为 $O(1)$
+* 时间复杂度：在固定 $9 \times 9$ 的问题里，计算量不随数据变化而变化。复杂度为 $O(1)$
+* 空间复杂度：在固定 $9 \times 9$ 的问题里，存储空间不随数据变化而变化。复杂度为 $O(1)$
 
 ---
 
