--- a/LeetCode/31-40/39. 组合总和（中等）.md
+++ b/LeetCode/31-40/39. 组合总和（中等）.md
@@ -86,7 +86,7 @@ class Solution {
         }
         if (u == cs.length || t < 0) return;
 
-        // 枚举 cs[u] 的使用次数
+        // 枚举 cs[u] 的使用次数w
         for (int i = 0; cs[u] * i <= t; i++) {
             dfs(cs, t - cs[u] * i, u + 1, ans, cur);
             cur.add(cs[u]);
@@ -98,8 +98,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：由于每个数字的使用次数不确定，因此无法分析具体的复杂度。但是 DFS 回溯算法通常是指数级别的复杂度（因此数据范围通常为 30 以内）。这里暂定 $O(n * 2^n)$
-* 空间复杂度：同上。复杂度为 $O(n * 2^n)$
+* 时间复杂度：由于每个数字的使用次数不确定，因此无法分析具体的复杂度。但是 DFS 回溯算法通常是指数级别的复杂度（因此数据范围通常为 30 以内）。这里暂定 $O(n \times 2^n)$
+* 空间复杂度：同上。复杂度为 $O(n \times 2^n)$
 
 ---
 
