--- a/LeetCode/31-40/40. 组合总和 II（中等）.md
+++ b/LeetCode/31-40/40. 组合总和 II（中等）.md
@@ -6,9 +6,9 @@ Tag : 「回溯算法」、「DFS」、「组合总和问题」
 
 
 
-给定一个数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
+给定一个数组 `candidates` 和一个目标数 `target` ，找出 `candidates` 中所有可以使数字和为 `target` 的组合。
 
-candidates 中的每个数字在每个组合中只能使用一次。
+`candidates` 中的每个数字在每个组合中只能使用一次。
 
 说明：
 * 所有数字（包括目标数）都是正整数。
@@ -102,8 +102,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度： DFS 回溯算法通常是指数级别的复杂度（因此数据范围通常为 30 以内）。这里暂定 $O(n * 2^n)$
-* 空间复杂度：同上。复杂度为 $O(n * 2^n)$
+* 时间复杂度： DFS 回溯算法通常是指数级别的复杂度（因此数据范围通常为 30 以内）。这里暂定 $O(n \times 2^n)$
+* 空间复杂度：同上。复杂度为 $O(n \times 2^n)$
 
 ---
 
