--- a/LeetCode/31-40/34. 在排序数组中查找元素的第一个和最后一个位置（中等）.md
+++ b/LeetCode/31-40/34. 在排序数组中查找元素的第一个和最后一个位置（中等）.md
@@ -6,15 +6,15 @@ Tag : 「二分」
 
 
 
-给定一个按照升序排列的整数数组 nums，和一个目标值 target。
+给定一个按照升序排列的整数数组 `nums`，和一个目标值 `target`。
 
 找出给定目标值在数组中的开始位置和结束位置。
 
-如果数组中不存在目标值 target，返回 [-1, -1]。
+如果数组中不存在目标值 `target`，返回 $[-1, -1]$。
 
 **进阶：**
 
-* 你可以设计并实现时间复杂度为 O(log n) 的算法解决此问题吗？
+* 你可以设计并实现时间复杂度为 $O(\log{n})$ 的算法解决此问题吗？
 
 示例 1：
 ```
@@ -36,10 +36,10 @@ Tag : 「二分」
 ```
 
 提示：
-* 0 <= nums.length <= $10^5$
-* -$10^9$ <= nums[i] <= $10^9$
-* nums 是一个非递减数组
-* -$10^9$ <= target <= $10^9$
+* $0 <= nums.length <= 10^5$
+* $-10^9 <= nums[i] <= 10^9$
+* `nums` 是一个非递减数组
+* $-10^9 <= target <= 10^9$
 
 ---
 
