--- a/LeetCode/71-80/73. 矩阵置零（中等）.md
+++ b/LeetCode/71-80/73. 矩阵置零（中等）.md
@@ -6,12 +6,12 @@ Tag : 「模拟」
 
 
 
-给定一个 $m * n$ 的矩阵，如果一个元素为 $0$ ，则将其所在行和列的所有元素都设为 $0$ 。
+给定一个 $m \times n$ 的矩阵，如果一个元素为 $0$ ，则将其所在行和列的所有元素都设为 $0$ 。
 
 请使用「原地」算法。
 
 进阶：
-* 一个直观的解决方案是使用  $O(m * n)$ 的额外空间，但这并不是一个好的解决方案。
+* 一个直观的解决方案是使用  $O(m \times n)$ 的额外空间，但这并不是一个好的解决方案。
 * 一个简单的改进方案是使用 $O(m + n)$ 的额外空间，但这仍然不是最好的解决方案。
 * 你能想出一个仅使用常量空间的解决方案吗？
 
@@ -34,13 +34,13 @@ Tag : 「模拟」
 * $m == matrix.length$
 * $n == matrix[0].length$
 * $1 <= m, n <= 200$
-* -$2^{31} <= matrix[i][j] <= 2^{31} - $
+* $-2^{31} <= matrix[i][j] <= 2^{31} - 1$
 
 ---
 
 ### 前言
 
-由于 $O(m* n)$ 和 $O(m+n)$ 空间的解法都十分简单，无非是「同等大小的矩阵」或「与行列数量相等的标识」来记录置零信息。
+由于 $O(m \times n)$ 和 $O(m+n)$ 空间的解法都十分简单，无非是「同等大小的矩阵」或「与行列数量相等的标识」来记录置零信息。
 
 这里着重讲解利用原矩阵的 $O(1)$ 空间解法。
 
@@ -102,7 +102,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n*m)$
+* 时间复杂度：$O(n \times m)$
 * 空间复杂度：$O(1)$
 
 ---
