--- a/LeetCode/731-740/732. 我的日程安排表 III（困难）.md
+++ b/LeetCode/731-740/732. 我的日程安排表 III（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[732. 我的日程安排表 III](https://leetcode-cn.com/problems/my-calendar-iii/solution/by-ac_oier-cv31/)** ，难度为 **困难**。
 
-Tag : 「线段树」
+Tag : 「线段树」、「动态开点」
 
 
 
