--- a/LeetCode/321-330/327. 区间和的个数（困难）.md
+++ b/LeetCode/321-330/327. 区间和的个数（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[327. 区间和的个数](https://leetcode.cn/problems/count-of-range-sum/solution/by-ac_oier-b36o/)** ，难度为 **困难**。
 
-Tag : 「前缀和」、「离散化」、「树状数组」、「线段树」、「动态开点」
+Tag : 「前缀和」、「离散化」、「树状数组」、「线段树（动态开点）」
 
 
 
