--- a/LeetCode/731-740/731. 我的日程安排表 II（中等）.md
+++ b/LeetCode/731-740/731. 我的日程安排表 II（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[731. 我的日程安排表 II](https://leetcode-cn.com/problems/my-calendar-ii/solution/by-ac_oier-okkc/)** ，难度为 **中等**。
 
-Tag : 「线段树」、「动态开点」
+Tag : 「线段树（动态开点）」
 
 
 
