--- a/LeetCode/931-940/933. 最近的请求次数（简单）.md
+++ b/LeetCode/931-940/933. 最近的请求次数（简单）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[933. 最近的请求次数](https://leetcode-cn.com/problems/number-of-recent-calls/solution/by-ac_oier-evqe/)** ，难度为 **简单**。
 
-Tag : 「线段树」、「分块」、「动态开点」
+Tag : 「分块」、「线段树（动态开点）」
 
 
 
