--- a/LeetCode/731-740/732. 我的日程安排表 III（困难）.md
+++ b/LeetCode/731-740/732. 我的日程安排表 III（困难）.md
@@ -50,7 +50,7 @@ myCalendarThree.book(25, 55); // 返回 3
 * `add`: 懒标记；
 * `max`: 为当前区间的最大值。
 
-对于常规的线段树实现来说，都是一开始就调用 `build` 操作创建空树，而线段树一般以「满二叉树」的形式用数组存储，因此需要 $4 * n$ 的空间，并且这些空间在起始 `build` 空树的时候已经锁死。
+对于常规的线段树实现来说，都是一开始就调用 `build` 操作创建空树，而线段树一般以「满二叉树」的形式用数组存储，因此需要 $4 \times n$ 的空间，并且这些空间在起始 `build` 空树的时候已经锁死。
 
 如果一道题仅仅是「值域很大」的离线题（提前知晓所有的询问），我们还能通过「离散化」来进行处理，将值域映射到一个小空间去，从而解决 `MLE`  问题。
 
@@ -58,11 +58,11 @@ myCalendarThree.book(25, 55); // 返回 3
 
 动态开点的优势在于，不需要事前构造空树，而是在插入操作 `update` 和查询操作 `query` 时根据访问需要进行「开点」操作。由于我们不保证查询和插入都是连续的，因此对于父节点 $u$ 而言，我们不能通过 `u << 1` 和 `u << 1  | 1` 的固定方式进行访问，而要将节点 $tr[u]$ 的左右节点所在 `tr` 数组的下标进行存储，分别记为 `ls` 和 `rs` 属性。对于 $tr[u].ls = 0$ 和 $tr[u].rs = 0$ 则是代表子节点尚未被创建，当需要访问到它们，而又尚未创建的时候，则将其进行创建。
 
-由于存在「懒标记」，线段树的插入和查询都是 $\log{n}$ 的，因此我们在单次操作的时候，最多会创建数量级为 $\log{n}$ 的点，因此空间复杂度为 $O(m\log{n})$，而不是 $O(4 * n)$，而开点数的预估需不能仅仅根据 $\log{n}$ 来进行，还要对常数进行分析，才能得到准确的点数上界。
+由于存在「懒标记」，线段树的插入和查询都是 $\log{n}$ 的，因此我们在单次操作的时候，最多会创建数量级为 $\log{n}$ 的点，因此空间复杂度为 $O(m\log{n})$，而不是 $O(4 \times n)$，而开点数的预估需不能仅仅根据 $\log{n}$ 来进行，还要对常数进行分析，才能得到准确的点数上界。
 
 动态开点相比于原始的线段树实现，本质仍是使用「满二叉树」的形式进行存储，只不过是按需创建区间，如果我们是按照连续段进行查询或插入，最坏情况下仍然会占到 $4 * n$ 的空间，因此盲猜 $\log{n}$ 的常数在 $4$ 左右，保守一点可以直接估算到 $6$，因此我们可以估算点数为 $6 * m * \log{n}$，其中 $n = 1e9$ 和 $m = 1e3$ 分别代表值域大小和查询次数。
 
-当然一个比较实用的估点方式可以「尽可能的多开点数」，利用题目给定的空间上界和我们创建的自定义类（结构体）的大小，尽可能的多开（ `Java` 的 $128M$ 可以开到 $5 * 10^6$ 以上）。
+当然一个比较实用的估点方式可以「尽可能的多开点数」，利用题目给定的空间上界和我们创建的自定义类（结构体）的大小，尽可能的多开（ `Java` 的 $128M$ 可以开到 $5 \times 10^6$ 以上）。
 
 代码：
 ```Java
