--- a/LeetCode/431-440/436. 寻找右区间（中等）.md
+++ b/LeetCode/431-440/436. 寻找右区间（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[436. 寻找右区间](https://leetcode.cn/problems/find-right-interval/solution/by-ac_oier-sijp/)** ，难度为 **简单**。
+这是 LeetCode 上的 **[436. 寻找右区间](https://leetcode.cn/problems/find-right-interval/solution/by-ac_oier-sijp/)** ，难度为 **中等**。
 
 Tag : 「排序」、「二分」、「双指针」、「莫队算法」
 
