--- a/Index/博弈论.md
+++ b/Index/博弈论.md
@@ -1,6 +1,7 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
 | [292. Nim 游戏](https://leetcode-cn.com/problems/nim-game/)  | [LeetCode 题解链接](https://leetcode-cn.com/problems/nim-game/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-wmz2t/) | 中等 | 🤩🤩🤩🤩     |
+| [464. 我能赢吗](https://leetcode.cn/problems/can-i-win/)     | [LeetCode 题解链接](https://leetcode.cn/problems/can-i-win/solution/by-ac_oier-0ed9/) | 中等 | 🤩🤩🤩🤩     |
 | [810. 黑板异或游戏](https://leetcode-cn.com/problems/chalkboard-xor-game/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/chalkboard-xor-game/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-ges7k/) | 困难 | 🤩🤩🤩🤩     |
 | [877. 石子游戏](https://leetcode-cn.com/problems/stone-game/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/stone-game/solution/gong-shui-san-xie-jing-dian-qu-jian-dp-j-wn31/) | 中等 | 🤩🤩🤩🤩     |
 | [1728. 猫和老鼠 II](https://leetcode.cn/problems/cat-and-mouse-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/cat-and-mouse-ii/solution/by-ac_oier-gse8/) | 困难 | 🤩🤩🤩🤩     |
