--- a/LeetCode/671-680/675. 为高尔夫比赛砍树（困难）.md
+++ b/LeetCode/671-680/675. 为高尔夫比赛砍树（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[675. 为高尔夫比赛砍树](https://leetcode.cn/problems/cut-off-trees-for-golf-event/solution/by-ac_oier-ksth/)** ，难度为 **困难**。
 
-Tag : 「图论 BFS」、「AStar 算法」、「启发式搜索」
+Tag : 「图论 BFS」、「AStar 算法」、「启发式搜索」、「并查集」
 
 
 
@@ -192,6 +192,102 @@ class Solution {
     int f(int X, int Y, int P, int Q) {
         return Math.abs(X - P) + Math.abs(Y - Q);
     }
+    int astar(int X, int Y, int P, int Q) {
+        if (X == P && Y == Q) return 0;
+        Map<Integer, Integer> map = new HashMap<>();
+        PriorityQueue<int[]> q = new PriorityQueue<>((a,b)->a[0]-b[0]);
+        q.add(new int[]{f(X, Y, P, Q), X, Y});
+        map.put(getIdx(X, Y), 0);
+        while (!q.isEmpty()) {
+            int[] info = q.poll();
+            int x = info[1], y = info[2], step = map.get(getIdx(x, y));
+            for (int[] di : dirs) {
+                int nx = x + di[0], ny = y + di[1], nidx = getIdx(nx, ny);
+                if (nx < 0 || nx >= n || ny < 0 || ny >= m) continue;
+                if (g[nx][ny] == 0) continue;
+                if (nx == P && ny == Q) return step + 1;
+                if (!map.containsKey(nidx) || map.get(nidx) > step + 1) {
+                    q.add(new int[]{step + 1 + f(nx, ny, P, Q), nx, ny});
+                    map.put(nidx, step + 1);
+                }
+            }
+        }
+        return -1;
+    }
+}
+```
+* 时间复杂度：启发式搜索分析时空复杂度意义不大
+* 空间复杂度：启发式搜索分析时空复杂度意义不大
+
+---
+
+### AStar 算法 + 并查集预处理无解
+
+我们知道，AStar 算法使用到了「优先队列（堆）」来进行启发式搜索，而对于一些最佳路径方向与两点相对位置相反（例如 $T$ 在 $S$ 的右边，但由于存在障碍，最短路径需要先从左边绕一圈才能到 $T$），AStar 反而会因为优先队列（堆）而多一个 $\log$ 的复杂度。
+
+因此一个可行的优化是，我们先提前处理「无解」的情况，常见的做法是在预处理过程中运用「并查集」来维护连通性。
+
+这种对于不影响复杂度上界的预处理相比后续可能出现的大量无效搜索（最终无解）的计算量而言，是有益的。
+
+代码：
+```Java
+class Solution {
+    int N = 50;
+    int[][] g = new int[N][N];
+    int n, m;
+    int[] p = new int[N * N + 10];
+    List<int[]> list = new ArrayList<>();
+    void union(int a, int b) {
+        p[find(a)] = p[find(b)];
+    }
+    boolean query(int a, int b) {
+        return find(a) == find(b);
+    }
+    int find(int x) {
+        if (p[x] != x) p[x] = find(p[x]);
+        return p[x];
+    }
+    int getIdx(int x, int y) {
+        return x * m + y;
+    }
+    public int cutOffTree(List<List<Integer>> forest) {
+        n = forest.size(); m = forest.get(0).size();
+        // 预处理过程中，同时使用「并查集」维护连通性
+        for (int i = 0; i < n * m; i++) p[i] = i;
+        int[][] tempDirs = new int[][]{{0,-1},{-1,0}};
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < m; j++) {
+                g[i][j] = forest.get(i).get(j);
+                if (g[i][j] > 1) list.add(new int[]{g[i][j], i, j});
+                if (g[i][j] == 0) continue;
+                // 只与左方和上方的区域联通即可确保不重不漏
+                for (int[] di : tempDirs) {
+                    int nx = i + di[0], ny = j + di[1];
+                    if (nx < 0 || nx >= n || ny < 0 || ny >= m) continue;
+                    if (g[nx][ny] != 0) union(getIdx(i, j), getIdx(nx, ny));
+                }
+            }
+        }
+        // 若不满足所有树点均与 (0,0)，提前返回无解
+        for (int[] info : list) {
+            int x = info[1], y = info[2];
+            if (!query(getIdx(0, 0), getIdx(x, y))) return -1;
+        }
+        Collections.sort(list, (a,b)->a[0]-b[0]);
+        int x = 0, y = 0, ans = 0;
+        for (int[] ne : list) {
+            int nx = ne[1], ny = ne[2];
+            int d = astar(x, y, nx, ny);
+            if (d == -1) return -1;
+            ans += d;
+            x = nx; y = ny;
+        }
+        return ans;
+    }
+    int f(int X, int Y, int P, int Q) {
+        return Math.abs(X - P) + Math.abs(Y - Q);
+    }
+    int[][] dirs = new int[][]{{0,1},{0,-1},{1,0},{-1,0}};
     int astar(int X, int Y, int P, int Q) {
         if (X == P && Y == Q) return 0;
         Map<Integer, Integer> map = new HashMap<>();
