✨style: Bulk processing format

--- a/LeetCode/481-490/488. 祖玛游戏（困难）.md
+++ b/LeetCode/481-490/488. 祖玛游戏（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[488. 祖玛游戏](https://leetcode-cn.com/problems/zuma-game/solution/gong-shui-san-xie-yi-ti-shuang-jie-sou-s-3ftb/)** ，难度为 **困难**。
 
-Tag : 「DFS」、「搜索」、「启发式搜索」
+Tag : 「DFS」、「搜索」、「启发式搜索」、「AStar 算法」
 
 
 
