--- a/LeetCode/671-680/675. 为高尔夫比赛砍树（困难）.md
+++ b/LeetCode/671-680/675. 为高尔夫比赛砍树（困难）.md
@@ -140,9 +140,9 @@ class Solution {
 
 ### AStar 算法
 
-**由于问题的本质是求最短路，同时原问题的边权为 $1$，因此套用其他复杂度比 `01 BFS` 高的最短路算法，对于本题而言是没有意义，但运用启发式搜索 AStar 算法来优化则是有意义。**
+**由于问题的本质是求最短路，同时原问题的边权为 $1$，因此套用其他复杂度比 `BFS` 高的最短路算法，对于本题而言是没有意义，但运用启发式搜索 AStar 算法来优化则是有意义。**
 
-因为在 `01 BFS` 过程中，我们会无差别往「四联通」方向进行搜索，直到找到「当前树点的下一个目标位置」为止，而实际上，两点之间的最短路径往往与两点之间的相对位置相关。
+因为在 `BFS` 过程中，我们会无差别往「四联通」方向进行搜索，直到找到「当前树点的下一个目标位置」为止，而实际上，两点之间的最短路径往往与两点之间的相对位置相关。
 
 举个 🌰，当前我们在位置 $S$，我们目标位置是 $T$，而 $T$ 在 $S$ 的右下方，此时我们应当优先搜索方向"往右下方"的路径，当无法从"往右下方"的路径到达 $T$，我们再考虑搜索其他大方向的路径：
 
