--- a/LeetCode/841-850/847. 访问所有节点的最短路径（困难）.md
+++ b/LeetCode/841-850/847. 访问所有节点的最短路径（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[847. 访问所有节点的最短路径](https://leetcode-cn.com/problems/shortest-path-visiting-all-nodes/solution/gong-shui-san-xie-yi-ti-shuang-jie-bfs-z-6p2k/)** ，难度为 **困难**。
 
-Tag : 「图」、「图论 BFS」、「动态规划」、「状态压缩」
+Tag : 「图」、「图论 BFS」、「动态规划」、「状态压缩」、「AStar 算法」
 
 
 
@@ -186,7 +186,7 @@ class Solution {
 
 ---
 
-### AStar 
+### AStar 算法
 
 显然，从 $state$ 到 $state'$ 的「理论最小修改成本」为两者二进制表示中不同位数的个数。
 
