--- a/LeetCode/671-680/675. 为高尔夫比赛砍树（困难）.md
+++ b/LeetCode/671-680/675. 为高尔夫比赛砍树（困难）.md
@@ -148,7 +148,7 @@ class Solution {
 
 ![image.png](https://pic.leetcode-cn.com/1653270722-gYnbgm-image.png)
 
-如何设计这样带有优先级的搜索顺序，则是 AStar 算法「启发式函数」的设计过程，其本质是对应了对「最小步数」的估算，只有当我们确保「最小步数估算 >= 实际最小步数」，AStar 算法的正确性才得以保证。
+如何设计这样带有优先级的搜索顺序，则是 AStar 算法「启发式函数」的设计过程，其本质是对应了对「最小步数」的估算，只有当我们确保「最小步数估算 $\leq $ 实际最小步数」，AStar 算法的正确性才得以保证。
 
 因此我们往往会直接使用「理论最小步数」来作为启发式函数的，对于本题，可直接使用「曼哈顿距离」作为「理论最小步数」。
 
